export interface Supplier {
  id?: string;
  name: string;
  email: string;
  phone: number;
  location: string;
  specialties: string[];
  user_id: string;
}
